# project_ploutos

./: .coveragerc  .env.example  .gitattributes  .gitignore  =0.2.1  =1.11.0  AGENTS.md  ANALYSIS_SUMMARY.txt  ARCHITECTURE.md  CLAUDE.md  FIX_FINAL.md  FIX_GYMNASIUM.md  INSTALL.md  INSTALL_V6.md  LIVE_TRADING_QUICKSTART.md  Makefile  Optimisation IA Trading_ Paramètres Clés.txt  QUICKSTART_V7_1.md  QUICKSTART_V8.md  README.md  README_V6_ADVANCED.md  ROADMAP_V7_1.md  SIMPLE_START.md  START_HERE.md  TRAINING.md  TROUBLESHOOTING.md  V6_READY.txt  V7_1_ENHANCEMENT_GUIDE.md  V7_1_SUMMARY.txt  V7_1_WHAT_NOW.txt  __init__.py  benchmark.py  benchmark_features_optimized.py  benchmark_obs.py  black_output.txt  claude.md  debug_cuda.py  debug_output.txt  fix_import.py  fix_init.py  (+46 more)
.Jules/: palette.md
.claude/: settings.local.json
.github/: IMPLEMENTATION_CHECKLIST.md
.jules/: bolt.md  palette.md  sentinel.md
advisory/: __init__.py  engine.py  models.py
config/: __init__.py  advisory_config.py  autonomous_config.yaml  config.py  config.yaml  grafana_dashboard.json  hardware.py  schema.py  settings.py  test_config.yaml  tickers.py  training.yaml  training_config_v3.yaml  training_config_v4_optimal.yaml  training_config_v6_better_timing.yaml  training_config_v6_extended_50m.yaml  training_config_v7_sp500.yaml  training_config_v8.yaml  training_config_v8_cloud.yaml  watchlists.json
core/: __init__.py  adaptive_curriculum.py  advanced_features.py  advanced_features_v2.py  adversarial_wrapper.py  alerts.py  alpaca_data_fetcher.py  artifacts.py  asset_selector.py  auto_fixer.py  auto_optimizer.py  constants.py  data_fetcher.py  data_loader.py  data_pipeline.py  discord_notifier.py  discrete_trading_env.py  drift_detector.py  drift_detector_advanced.py  ensemble.py  ensemble_trader.py  env_config.py  environment.py  environment_continuous.py  environment_factory.py  environment_multitimeframe.py  environment_sharpe.py  evidence_hardening.py  exceptions.py  feature_adapter.py  features.py  live_observation.py  macro_data.py  market_analyzer.py  market_regime.py  market_scanner.py  market_status.py  metrics.py  model_support.py  models.py  (+29 more)
dashboard/: CHANGELOG.md  README.md  __init__.py  analytics.py  app.py  app_v2.py  demo_monitor.py  requirements.txt  technical_analysis.py
database/: __init__.py  advisory_db.py  db.py  schema.sql
docs/: APPLY_FIXES_TO_UNIVERSAL.md  ARCHITECTURE_V9.md  AUDIT_TECHNIQUE_V8.md  CURRICULUM_LEARNING.md  DEBUG_REWARD_SYSTEM.md  DEPLOY_V2_GUIDE.md  DEV_KNOWLEDGE.md  FEATURES_COMPLETE.md  GUIDE_V4_OPTIMAL.md  IMPLEMENTATION_ROADMAP.md  MONITORING.md  OPTIMIZATION_GUIDE_V6.md  PIVOT_STRATEGY_V7.md  QUICKSTART_MONITORING.md  QUICK_START.md  RELEASE_NOTES_V8.md  RELEASE_NOTES_V9.md  REWARD_SYSTEM_FIX.md  RISK_MANAGEMENT.md  ROADMAP.md  RUNPOD_GUIDE.md  SPECS_V9.md  TRAINING_V3_GUIDE.md  V3_FIXED_CHANGELOG.md  V3_TREND_FOLLOWING.md  V6_BETTER_TIMING.md  V6_EXTENDED_50M.md  V7_MOMENTUM_EXPLAINED.md  V8_ORACLE_README.md  coding_guidelines.md
legacy/: README.md
notifications/: __init__.py  discord_notifier.py
project_ploutos/: ai_config.json  ai_logger.py  ai_trainer.py  alpaca_training.py  auto_trader.py  backtest_pro.py  backtest_visual.py  brain_crypto_vecnorm.pkl  brain_defensive_vecnorm.pkl  brain_energy_vecnorm.pkl  brain_tech_vecnorm.pkl  config.py  dashboard.py  discord_bot.py  gestion_portefeuille.py  gestion_watchlist.py  journal_trading.csv  launch_training.sh  llm_analyst.py  logger_bot.py  main.py  memoire_ia.json  monitor_log.json  news_analyst.py  night_scan.py  notifier.py  portefeuille.json  requirements.txt  scanner_live.py  shortlist_ia.json  trading_bot.py  trading_env.py
scripts/: __init__.py  analyze_why_fails.py  analyze_why_fails_v6.py  apply_improvements.py  apply_v6_patches.py  archive_artifacts.py  audit_repo.py  autonomous_system.py  autonomous_trading_system.py  backtest.py  backtest_reliability.py  backtest_ultimate.py  backtest_v6.py  benchmark_all_strategies.py  build_dataset.py  check_gpu.py  compare_strategies.py  daily_summary.py  debug_data.py  debug_simple_env.py  debug_verbose_env.py  deploy.py  deploy_autonomous.sh  deploy_v7_enhanced.sh  diagnose_model.py  download.py  download_data.py  feature_importance_analysis.py  fetch_all_data.py  fix_dashboard_routes.sh  fix_data_fetcher.py  fix_homepage.sh  housekeeping.py  import_grafana_dashboard.py  init_database.py  install_services.sh  install_training_deps.sh  launch_training_ultimate.sh  monitor.sh  monitor_production.py  (+73 more)
streaming/: README.md  live_analyzer.py  signal_detector.py  websocket_manager.py  yahoo_stream.py
templates/: index.yml
tests/: README.md  backtest_framework.py  conftest.py  quick_test.py  test_advanced_features.py  test_alpaca_client.py  test_alpaca_coverage.py  test_archive_artifacts.py  test_artifacts.py  test_basic_coverage.py  test_compare_strategies.py  test_config.py  test_constants.py  test_coverage_boost.py  test_coverage_boost_v2.py  test_dashboard_auth.py  test_dashboard_auth_sentinel.py  test_dashboard_frontend.py  test_dashboard_optimization.py  test_dashboard_routes.py  test_dashboard_security.py  test_data_fetcher.py  test_data_pipeline.py  test_db.py  test_db_security.py  test_demo_dashboard.py  test_demo_monitor.py  test_ensemble.py  test_env_config.py  test_etoro_client.py  test_evidence_hardening.py  test_exceptions.py  test_features_polars.py  test_housekeeping.py  test_integration_v9.py  test_league.py  test_live_execution.py  test_live_observation.py  test_logger.py  test_macro_data.py  (+32 more)
trading/: __init__.py  alpaca_client.py  alpaca_crypto_client.py  alpaca_unified_client.py  autonomous_trader.py  brain_trader.py  broker_factory.py  broker_interface.py  ensemble_trader.py  etoro_client.py  live_execution.py  live_trader.py  live_trader_ensemble.py  portfolio.py  portfolio_manager.py  stop_loss_manager.py
training/: __init__.py  curriculum_trainer.py  league.py  strategy_compare.py  strategy_policies.py  train.py  train_ensemble.py  train_v3_ultimate.py  train_v4_optimal.py  train_v6_better_timing.py  trainer.py  (+4 more)
(+445 files in other folders)
