[project]
name = "ploutos-trading"
version = "2.0.0"
description = "Systeme de trading algorithmique avec Reinforcement Learning"
authors = [
    {name = "Vimif", email = "your@email.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "polars>=0.20.0",
    "pyarrow>=14.0.0",
    "gymnasium>=0.29.0",
    "stable-baselines3>=2.0.0",
    "torch>=2.0.0",
    "yfinance>=0.2.28",
    "alpaca-py>=0.9.0",
    "wandb>=0.15.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "scikit-learn>=1.4.0",
    "ta>=0.11.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
web = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
]
training = [
    "sb3-contrib>=2.0.0",
    "tensorboard>=2.13.0",
    "tqdm>=4.65.0",
    "rich>=13.0.0",
    "optuna>=3.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.3.0",
    "mypy>=1.5.0",
]

[project.scripts]
ploutos-train = "training.train:main"
ploutos-backtest = "scripts.backtest_ultimate:main"
ploutos-pipeline = "scripts.run_pipeline:main"
ploutos-robustness = "scripts.robustness_tests:main"
ploutos-paper = "scripts.paper_trade:main"
ploutos-compare = "scripts.compare_strategies:main"
ploutos-profit-audit = "scripts.profitability_audit:main"
ploutos-league = "scripts.run_league_batch:main"
ploutos-housekeeping = "scripts.housekeeping:main"
ploutos-archive = "scripts.archive_artifacts:main"
ploutos-repo-audit = "scripts.audit_repo:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "training*", "trading*", "config*", "scripts*", "dashboard*"]
exclude = ["data*", "logs*", "models*", "runs*", "tests*", ".git*", ".vscode*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
exclude = ["*.html"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
